--- a/css/app.css
+++ b/css/app.css
@@ -1948,11 +1948,11 @@ kbd {
       background-color: #252525;
       color: #fff; }
   .button.secondary {
-    background-color: #777;
-    color: #fff; }
+    background-color: #e6e6e6;
+    color: #000; }
     .button.secondary:hover, .button.secondary:focus {
-      background-color: #5f5f5f;
-      color: #fff; }
+      background-color: #b8b8b8;
+      color: #000; }
   .button.success {
     background-color: #3adb76;
     color: #fff; }
@@ -1986,11 +1986,11 @@ kbd {
         border-color: #171717;
         color: #171717; }
     .button.hollow.secondary {
-      border: 1px solid #777;
-      color: #777; }
+      border: 1px solid #e6e6e6;
+      color: #e6e6e6; }
       .button.hollow.secondary:hover, .button.hollow.secondary:focus {
-        border-color: #3c3c3c;
-        color: #3c3c3c; }
+        border-color: #737373;
+        color: #737373; }
     .button.hollow.success {
       border: 1px solid #3adb76;
       color: #3adb76; }
@@ -2384,8 +2384,8 @@ select {
   background: #2e2e2e;
   color: #fefefe; }
   .badge.secondary {
-    background: #777;
-    color: #fefefe; }
+    background: #e6e6e6;
+    color: #0a0a0a; }
   .badge.success {
     background: #3adb76;
     color: #fefefe; }
@@ -2460,11 +2460,11 @@ select {
       background-color: #252525;
       color: #fff; }
   .button-group.secondary .button {
-    background-color: #777;
-    color: #fff; }
+    background-color: #e6e6e6;
+    color: #000; }
     .button-group.secondary .button:hover, .button-group.secondary .button:focus {
-      background-color: #5f5f5f;
-      color: #fff; }
+      background-color: #b8b8b8;
+      color: #000; }
   .button-group.success .button {
     background-color: #3adb76;
     color: #fff; }
@@ -2508,7 +2508,7 @@ select {
   .callout.primary {
     background-color: #e0e0e0; }
   .callout.secondary {
-    background-color: #ebebeb; }
+    background-color: #fbfbfb; }
   .callout.success {
     background-color: #e1faea; }
   .callout.alert {
@@ -2725,8 +2725,8 @@ select {
   background: #2e2e2e;
   color: #fefefe; }
   .label.secondary {
-    background: #777;
-    color: #fefefe; }
+    background: #e6e6e6;
+    color: #0a0a0a; }
   .label.success {
     background: #3adb76;
     color: #fefefe; }
@@ -3058,7 +3058,7 @@ body {
   .progress.primary .progress-meter {
     background-color: #2e2e2e; }
   .progress.secondary .progress-meter {
-    background-color: #777; }
+    background-color: #e6e6e6; }
   .progress.success .progress-meter {
     background-color: #3adb76; }
   .progress.alert .progress-meter {
