--- a/css/app.css
+++ b/css/app.css
@@ -724,11 +724,11 @@ html {
 body {
   padding: 0;
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: Arial, sans-serif;
   font-weight: normal;
-  line-height: 1.5;
-  color: #0a0a0a;
-  background: #fefefe;
+  line-height: 1.3;
+  color: #4baad4;
+  background: #232e33;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
@@ -1643,7 +1643,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
   color: inherit;
@@ -1697,12 +1697,12 @@ h6 {
   h6 {
     font-size: 1rem; } }
 a {
-  color: #2e2e2e;
+  color: #4baad4;
   text-decoration: none;
   line-height: inherit;
   cursor: pointer; }
   a:hover, a:focus {
-    color: #282828; }
+    color: #3099c7; }
   a img {
     border: 0; }
 
@@ -1759,15 +1759,15 @@ cite {
     content: '\2014 \0020'; }
 
 abbr {
-  color: #0a0a0a;
+  color: #4baad4;
   cursor: help;
-  border-bottom: 1px dotted #0a0a0a; }
+  border-bottom: 1px dotted #232e33; }
 
 code {
   font-family: Consolas, "Liberation Mono", Courier, monospace;
   font-weight: normal;
-  color: #0a0a0a;
-  background-color: #e6e6e6;
+  color: #232e33;
+  background-color: #fefefe;
   border: 1px solid #cacaca;
   padding: 0.125rem 0.3125rem 0.0625rem; }
 
@@ -1775,7 +1775,7 @@ kbd {
   padding: 0.125rem 0.25rem 0;
   margin: 0;
   background-color: #e6e6e6;
-  color: #0a0a0a;
+  color: #232e33;
   font-family: Consolas, "Liberation Mono", Courier, monospace; }
 
 .subheader {
@@ -1923,12 +1923,12 @@ kbd {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  background-color: #2e2e2e;
+  background-color: #4baad4;
   color: #fff; }
   [data-whatinput='mouse'] .button {
     outline: 0; }
   .button:hover, .button:focus {
-    background-color: #272727;
+    background-color: #2f97c5;
     color: #fff; }
   .button.tiny {
     font-size: 0.6rem; }
@@ -1942,10 +1942,10 @@ kbd {
     margin-left: 0;
     margin-right: 0; }
   .button.primary {
-    background-color: #2e2e2e;
+    background-color: #4baad4;
     color: #fff; }
     .button.primary:hover, .button.primary:focus {
-      background-color: #252525;
+      background-color: #2c8eb9;
       color: #fff; }
   .button.secondary {
     background-color: #777;
@@ -1972,19 +1972,19 @@ kbd {
       background-color: #cc8b00;
       color: #fff; }
   .button.hollow {
-    border: 1px solid #2e2e2e;
-    color: #2e2e2e; }
+    border: 1px solid #4baad4;
+    color: #4baad4; }
     .button.hollow, .button.hollow:hover, .button.hollow:focus {
       background-color: transparent; }
     .button.hollow:hover, .button.hollow:focus {
-      border-color: #171717;
-      color: #171717; }
+      border-color: #1c5974;
+      color: #1c5974; }
     .button.hollow.primary {
-      border: 1px solid #2e2e2e;
-      color: #2e2e2e; }
+      border: 1px solid #4baad4;
+      color: #4baad4; }
       .button.hollow.primary:hover, .button.hollow.primary:focus {
-        border-color: #171717;
-        color: #171717; }
+        border-color: #1c5974;
+        color: #1c5974; }
     .button.hollow.secondary {
       border: 1px solid #777;
       color: #777; }
@@ -2042,9 +2042,9 @@ textarea {
   margin: 0 0 1rem;
   font-family: inherit;
   font-size: 1rem;
-  color: #0a0a0a;
+  color: #232e33;
   background-color: #fefefe;
-  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
+  box-shadow: inset 0 1px 2px rgba(35, 46, 51, 0.1);
   border-radius: 0;
   transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
   -webkit-appearance: none;
@@ -2103,7 +2103,7 @@ label {
   font-size: 0.875rem;
   font-weight: normal;
   line-height: 1.8;
-  color: #0a0a0a; }
+  color: #232e33; }
   label.middle {
     margin: 0 0 1rem;
     padding: 0.5625rem 0; }
@@ -2134,7 +2134,7 @@ label {
   height: 100%;
   padding: 0 1rem;
   background: #e6e6e6;
-  color: #0a0a0a;
+  color: #232e33;
   border: 1px solid #cacaca; }
   .input-group-label:first-child {
     border-right: 0; }
@@ -2169,7 +2169,7 @@ legend {
   padding: 1.25rem;
   margin: 1.125rem 0; }
   .fieldset legend {
-    background: #fefefe;
+    background: #232e33;
     padding: 0 0.1875rem;
     margin: 0;
     margin-left: -0.1875rem; }
@@ -2182,7 +2182,7 @@ select {
   font-size: 1rem;
   font-family: inherit;
   line-height: normal;
-  color: #0a0a0a;
+  color: #232e33;
   background-color: #fefefe;
   border-radius: 0;
   -webkit-appearance: none;
@@ -2333,7 +2333,7 @@ select {
   padding: 1.25rem 1rem;
   line-height: 1;
   font-size: 0.75rem;
-  color: #2e2e2e;
+  color: #4baad4;
   position: relative;
   border-bottom: 1px solid #e6e6e6; }
   .accordion-title:hover, .accordion-title:focus {
@@ -2363,7 +2363,7 @@ select {
     width: 0;
     height: 0;
     border: inset 6px;
-    border-color: #2e2e2e transparent transparent;
+    border-color: #4baad4 transparent transparent;
     border-top-style: solid;
     position: absolute;
     top: 50%;
@@ -2381,7 +2381,7 @@ select {
   font-size: 0.6rem;
   text-align: center;
   border-radius: 50%;
-  background: #2e2e2e;
+  background: #4baad4;
   color: #fefefe; }
   .badge.secondary {
     background: #777;
@@ -2406,7 +2406,7 @@ select {
     clear: both; }
   .breadcrumbs li {
     float: left;
-    color: #0a0a0a;
+    color: #232e33;
     font-size: 0.6875rem;
     cursor: default;
     text-transform: uppercase; }
@@ -2418,7 +2418,7 @@ select {
       top: 1px;
       opacity: 1; }
   .breadcrumbs a {
-    color: #2e2e2e; }
+    color: #4baad4; }
     .breadcrumbs a:hover {
       text-decoration: underline; }
   .breadcrumbs .disabled {
@@ -2437,7 +2437,7 @@ select {
     margin: 0;
     font-size: inherit; }
     .button-group .button:not(:last-child) {
-      border-right: 1px solid #fefefe; }
+      border-right: 1px solid #232e33; }
   .button-group.tiny {
     font-size: 0.6rem; }
   .button-group.small {
@@ -2454,10 +2454,10 @@ select {
       display: table-cell;
       float: none; }
   .button-group.primary .button {
-    background-color: #2e2e2e;
+    background-color: #4baad4;
     color: #fff; }
     .button-group.primary .button:hover, .button-group.primary .button:focus {
-      background-color: #252525;
+      background-color: #2c8eb9;
       color: #fff; }
   .button-group.secondary .button {
     background-color: #777;
@@ -2491,22 +2491,22 @@ select {
     .button-group.stacked-for-small .button {
       width: auto; }
       .button-group.stacked-for-small .button:not(:last-child) {
-        border-right: 1px solid #fefefe; } }
+        border-right: 1px solid #232e33; } }
 
 .callout {
   margin: 0 0 1rem 0;
   padding: 1rem;
-  border: 1px solid rgba(10, 10, 10, 0.25);
+  border: 1px solid rgba(35, 46, 51, 0.25);
   border-radius: 0;
   position: relative;
-  color: #0a0a0a;
+  color: #4baad4;
   background-color: white; }
   .callout > :first-child {
     margin-top: 0; }
   .callout > :last-child {
     margin-bottom: 0; }
   .callout.primary {
-    background-color: #e0e0e0; }
+    background-color: #e4f2f9; }
   .callout.secondary {
     background-color: #ebebeb; }
   .callout.success {
@@ -2537,7 +2537,7 @@ select {
   [data-whatinput='mouse'] .close-button {
     outline: 0; }
   .close-button:hover, .close-button:focus {
-    color: #0a0a0a; }
+    color: #232e33; }
 
 .is-drilldown {
   position: relative;
@@ -2567,7 +2567,7 @@ select {
     width: 0;
     height: 0;
     border: inset 6px;
-    border-color: transparent transparent transparent #2e2e2e;
+    border-color: transparent transparent transparent #4baad4;
     border-left-style: solid;
     position: absolute;
     top: 50%;
@@ -2580,7 +2580,7 @@ select {
   width: 0;
   height: 0;
   border: inset 6px;
-  border-color: transparent #2e2e2e transparent transparent;
+  border-color: transparent #4baad4 transparent transparent;
   border-right-style: solid;
   float: left;
   margin-right: 0.75rem;
@@ -2588,7 +2588,7 @@ select {
   margin-top: 14px; }
 
 .dropdown-pane {
-  background-color: #fefefe;
+  background-color: #232e33;
   border: 1px solid #cacaca;
   display: block;
   padding: 1rem;
@@ -2626,7 +2626,7 @@ select {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: #2e2e2e transparent transparent;
+    border-color: #4baad4 transparent transparent;
     border-top-style: solid;
     position: absolute;
     top: 0.825rem;
@@ -2637,7 +2637,7 @@ select {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent #2e2e2e transparent transparent;
+    border-color: transparent #4baad4 transparent transparent;
     border-right-style: solid;
     float: left;
     margin-left: 0;
@@ -2648,7 +2648,7 @@ select {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent transparent transparent #2e2e2e;
+    border-color: transparent transparent transparent #4baad4;
     border-left-style: solid; }
   .dropdown.menu .is-dropdown-submenu-parent.is-left-arrow.opens-inner .submenu {
     right: 0;
@@ -2722,7 +2722,7 @@ select {
   white-space: nowrap;
   cursor: default;
   border-radius: 0;
-  background: #2e2e2e;
+  background: #4baad4;
   color: #fefefe; }
   .label.secondary {
     background: #777;
@@ -2856,11 +2856,11 @@ body {
 .off-canvas-content,
 .off-canvas-content {
   min-height: 100%;
-  background: #fefefe;
+  background: #232e33;
   transition: transform 0.5s ease;
   backface-visibility: hidden;
   z-index: 1;
-  box-shadow: 0 0 10px rgba(10, 10, 10, 0.5); }
+  box-shadow: 0 0 10px rgba(35, 46, 51, 0.5); }
 
 .js-off-canvas-exit {
   display: none;
@@ -2956,7 +2956,7 @@ body {
   padding: 1rem;
   margin-bottom: 0;
   color: #fefefe;
-  background-color: rgba(10, 10, 10, 0.5); }
+  background-color: rgba(35, 46, 51, 0.5); }
 
 .orbit-previous, .orbit-next {
   position: absolute;
@@ -2968,7 +2968,7 @@ body {
   [data-whatinput='mouse'] .orbit-previous, [data-whatinput='mouse'] .orbit-next {
     outline: 0; }
   .orbit-previous:hover, .orbit-next:hover, .orbit-previous:active, .orbit-next:active, .orbit-previous:focus, .orbit-next:focus {
-    background-color: rgba(10, 10, 10, 0.5); }
+    background-color: rgba(35, 46, 51, 0.5); }
 
 .orbit-previous {
   left: 0; }
@@ -3015,7 +3015,7 @@ body {
         display: inline-block; } }
   .pagination a,
   .pagination button {
-    color: #0a0a0a;
+    color: #232e33;
     display: block;
     padding: 0.1875rem 0.625rem;
     border-radius: 0; }
@@ -3024,7 +3024,7 @@ body {
       background: #e6e6e6; }
   .pagination .current {
     padding: 0.1875rem 0.625rem;
-    background: #2e2e2e;
+    background: #4baad4;
     color: #fefefe;
     cursor: default; }
   .pagination .disabled {
@@ -3036,7 +3036,7 @@ body {
   .pagination .ellipsis::after {
     content: '…';
     padding: 0.1875rem 0.625rem;
-    color: #0a0a0a; }
+    color: #232e33; }
 
 .pagination-previous a::before,
 .pagination-previous.disabled::before {
@@ -3056,7 +3056,7 @@ body {
   margin-bottom: 1rem;
   border-radius: 0; }
   .progress.primary .progress-meter {
-    background-color: #2e2e2e; }
+    background-color: #4baad4; }
   .progress.secondary .progress-meter {
     background-color: #777; }
   .progress.success .progress-meter {
@@ -3071,7 +3071,7 @@ body {
   display: block;
   width: 0%;
   height: 100%;
-  background-color: #2e2e2e;
+  background-color: #4baad4;
   border-radius: 0; }
   .progress-meter .progress-meter-text {
     position: absolute;
@@ -3116,14 +3116,14 @@ body {
   display: inline-block;
   width: 1.4rem;
   height: 1.4rem;
-  background-color: #2e2e2e;
+  background-color: #4baad4;
   transition: all 0.2s ease-in-out;
   touch-action: manipulation;
   border-radius: 0; }
   [data-whatinput='mouse'] .slider-handle {
     outline: 0; }
   .slider-handle:hover {
-    background-color: #272727; }
+    background-color: #2f97c5; }
   .slider-handle.is-dragging {
     transition: all 0s linear; }
 
@@ -3184,7 +3184,7 @@ body.is-reveal-open {
   left: 0;
   right: 0;
   z-index: 1005;
-  background-color: rgba(10, 10, 10, 0.45);
+  background-color: rgba(35, 46, 51, 0.45);
   overflow-y: scroll; }
 
 .reveal {
@@ -3280,7 +3280,7 @@ body.is-reveal-open {
     transform: translate3d(0, 0, 0);
     border-radius: 0; }
   input:checked ~ .switch-paddle {
-    background: #2e2e2e; }
+    background: #4baad4; }
     input:checked ~ .switch-paddle::after {
       left: 2.25rem; }
   [data-whatinput='mouse'] input:focus ~ .switch-paddle {
@@ -3348,7 +3348,7 @@ table {
   thead,
   tfoot {
     background: #f8f8f8;
-    color: #0a0a0a; }
+    color: #4baad4; }
     thead tr,
     tfoot tr {
       background: transparent; }
@@ -3410,11 +3410,11 @@ table.hover tr:nth-of-type(even):hover {
     background: transparent; }
 
 .tabs.primary {
-  background: #2e2e2e; }
+  background: #4baad4; }
   .tabs.primary > li > a {
     color: #fefefe; }
     .tabs.primary > li > a:hover, .tabs.primary > li > a:focus {
-      background: #383838; }
+      background: #3fa5d1; }
 
 .tabs-title {
   float: left; }
@@ -3423,7 +3423,7 @@ table.hover tr:nth-of-type(even):hover {
     padding: 1.25rem 1.5rem;
     line-height: 1;
     font-size: 12px;
-    color: #2e2e2e; }
+    color: #4baad4; }
     .tabs-title > a:hover {
       background: #fefefe; }
     .tabs-title > a:focus, .tabs-title > a[aria-selected='true'] {
@@ -3447,7 +3447,7 @@ table.hover tr:nth-of-type(even):hover {
 
 .thumbnail {
   border: solid 4px #fefefe;
-  box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
+  box-shadow: 0 0 0 1px rgba(35, 46, 51, 0.2);
   display: inline-block;
   line-height: 0;
   max-width: 100%;
@@ -3455,10 +3455,10 @@ table.hover tr:nth-of-type(even):hover {
   border-radius: 0;
   margin-bottom: 1rem; }
   .thumbnail:hover, .thumbnail:focus {
-    box-shadow: 0 0 6px 1px rgba(46, 46, 46, 0.5); }
+    box-shadow: 0 0 6px 1px rgba(75, 170, 212, 0.5); }
 
 .title-bar {
-  background: #0a0a0a;
+  background: #232e33;
   color: #fefefe;
   padding: 0.5rem; }
   .title-bar::before, .title-bar::after {
@@ -3511,7 +3511,7 @@ table.hover tr:nth-of-type(even):hover {
   cursor: help; }
 
 .tooltip {
-  background-color: #0a0a0a;
+  background-color: #232e33;
   color: #fefefe;
   font-size: 80%;
   padding: 0.75rem;
@@ -3526,7 +3526,7 @@ table.hover tr:nth-of-type(even):hover {
     width: 0;
     height: 0;
     border: inset 0.75rem;
-    border-color: transparent transparent #0a0a0a;
+    border-color: transparent transparent #232e33;
     border-bottom-style: solid;
     bottom: 100%;
     position: absolute;
@@ -3538,7 +3538,7 @@ table.hover tr:nth-of-type(even):hover {
     width: 0;
     height: 0;
     border: inset 0.75rem;
-    border-color: #0a0a0a transparent transparent;
+    border-color: #232e33 transparent transparent;
     border-top-style: solid;
     top: 100%;
     bottom: auto; }
@@ -3548,7 +3548,7 @@ table.hover tr:nth-of-type(even):hover {
     width: 0;
     height: 0;
     border: inset 0.75rem;
-    border-color: transparent transparent transparent #0a0a0a;
+    border-color: transparent transparent transparent #232e33;
     border-left-style: solid;
     bottom: auto;
     left: 100%;
@@ -3560,7 +3560,7 @@ table.hover tr:nth-of-type(even):hover {
     width: 0;
     height: 0;
     border: inset 0.75rem;
-    border-color: transparent #0a0a0a transparent transparent;
+    border-color: transparent #232e33 transparent transparent;
     border-right-style: solid;
     bottom: auto;
     left: auto;
@@ -3579,7 +3579,7 @@ table.hover tr:nth-of-type(even):hover {
   .top-bar ul {
     background-color: #e6e6e6; }
   .top-bar a {
-    color: #2e2e2e; }
+    color: #4baad4; }
   .top-bar input {
     width: 200px;
     margin-right: 1rem; }
@@ -3960,3 +3960,10 @@ table.hover tr:nth-of-type(even):hover {
 
 .long-delay {
   animation-delay: 700ms !important; }
+
+.hero-text {
+  margin-top: 30%;
+  opacity: .2; }
+
+body {
+  height: auto !important; }
