--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -541,7 +541,7 @@ $tooltip-radius: $global-radius;
 // 35. Top Bar
 // -----------
 
-$topbar-padding: 0.5rem;
-$topbar-background: $light-gray;
+$topbar-padding: 0.8rem 0.5rem 0 0.5rem;
+$topbar-background: rgba(39, 52, 56, .8);
 $topbar-link-color: $primary-color;
 $topbar-input-width: 200px;
