--- a/scss/app.scss
+++ b/scss/app.scss
@@ -59,7 +59,7 @@ img.bg {
   height: auto;
   position: fixed;
   z-index: -2;
-  opacity: .1;
+  opacity: .05;
   top: 0;
   left: 0;
 }
@@ -103,7 +103,7 @@ img.bg {
 }
 
 .hero {
-	background: rgba(39, 52, 56, .8);
+	/* background: rgba(39, 52, 56, .8); */
 	color: #2b383c;
 	margin-top: 15px;
 
@@ -182,5 +182,13 @@ img.bg {
 }
 
 .top-bar {
+}
+
+@media screen and (max-width: 1024px) {
+	.hook-head {
+		position: relative !important;
+		padding: 0 0 0 10px !important;
+		margin: 0 !important;
+	}
 }
 
