--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -544,6 +544,6 @@ $tooltip-radius: $global-radius;
 // -----------
 
 $topbar-padding: 0.8rem 0.5rem 0 0.5rem;
-$topbar-background: rgba(39, 52, 56, .8);
+$topbar-background: rgba(39, 52, 56, 1);
 $topbar-link-color: $primary-color;
 $topbar-input-width: 200px;
