--- a/css/app.css
+++ b/css/app.css
@@ -3583,7 +3583,7 @@ table.hover tr:nth-of-type(even):hover {
     clear: both; }
   .top-bar,
   .top-bar ul {
-    background-color: rgba(39, 52, 56, 0.8); }
+    background-color: #273438; }
   .top-bar a {
     color: #868c8e; }
   .top-bar input {
@@ -4018,7 +4018,7 @@ img.bg {
 .hero {
   /* background: rgba(39, 52, 56, .8); */
   color: #2b383c;
-  margin-top: 15px; }
+  margin-top: 5rem; }
   .hero h1 {
     background: -webkit-linear-gradient(#e5ef5b, #e5ef5b, #2b383c);
     -webkit-background-clip: text;
@@ -4069,6 +4069,14 @@ img.bg {
 
 .helper-icon {
   opacity: .5; }
+
+.top-bar {
+  position: fixed;
+  width: 100%;
+  text-align: center;
+  /* margin-bottom: 100px; */
+  /* margin: 0 auto; */
+  z-index: 999; }
 
 @media screen and (max-width: 1024px) {
   .hook-head {
