media query for subhead

--- a/css/app.css
+++ b/css/app.css
@@ -1661,7 +1661,7 @@ h6 {
     line-height: 0; }
 
 h1 {
-  font-size: 5.625rem; }
+  font-size: 3.75rem; }
 
 h2 {
   font-size: 1.25rem; }
@@ -1682,6 +1682,27 @@ h7 {
   font-size: 0.625rem; }
 
 @media screen and (min-width: 40em) {
+  h1 {
+    font-size: 9.375rem; }
+
+  h2 {
+    font-size: 2.5rem; }
+
+  h3 {
+    font-size: 1.9375rem; }
+
+  h4 {
+    font-size: 1.5625rem; }
+
+  h5 {
+    font-size: 1.25rem; }
+
+  h6 {
+    font-size: 1rem; }
+
+  h7 {
+    font-size: 0.625rem; } }
+@media screen and (min-width: 64em) {
   h1 {
     font-size: 12.5rem; }
 
@@ -4030,6 +4051,9 @@ img.bg {
     position: absolute;
     letter-spacing: 3px; }
 
+@media screen and (max-width: 1024px) {
+  .hero h1 {
+    text-align: left; } }
 .inline-list {
   list-style-type: none; }
   .inline-list li {
