--- a/css/app.css
+++ b/css/app.css
@@ -4108,5 +4108,4 @@ img.bg {
     padding: 0 0 0 10px !important;
     margin: 0 !important; } }
 .shots {
-  background: yellow;
-  height: auto; }
+  background: yellow; }
