--- a/scss/app.scss
+++ b/scss/app.scss
@@ -204,7 +204,76 @@ img.bg {
 	}
 }
 
+/* jribbble Shots */
+
 .shots {
-	background: yellow;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
+    list-style: none;
+    margin-top: 0;
+    padding-left: 0
+}
+
+.shots.hidden {
+    display: none
+}
+
+.shots__heading {
+    -webkit-flex-basis: 100%;
+    flex-basis: 100%
+}
+
+.shots__heading h3 {
+    margin-bottom: 0.2em
+}
+
+.shots--shot {
+    -webkit-flex: 0 0 100%;
+    flex: 0 0 100%
+}
+
+.shots--shot a {
+    display: block;
+    overflow: hidden;
+    padding: 0.1rem
+}
+
+.shots--shot img {
+    display: block;
+    width: 100%
+}
+
+@media screen and (min-width: 460px) {
+    .shots--shot {
+        -webkit-flex-basis: 50%;
+        flex-basis: 50%
+    }
+}
+
+@media screen and (min-width: 640px) {
+    .shots--shot {
+        -webkit-flex-basis: 33.33%;
+        flex-basis: 33.33%
+    }
+}
+
+[role="contentinfo"] {
+    padding-bottom: 2rem;
+    position: relative
+}
+
+[role="contentinfo"]::before {
+    background-color: #f40000;
+    content: "";
+    display: block;
+    height: 3px;
+    left: -2px;
+    margin: 0 auto;
+    position: relative;
+    top: 2px;
+    transform: rotate(0.1deg);
+    width: 99%
 }
 
