--- a/css/app.css
+++ b/css/app.css
@@ -4107,38 +4107,43 @@ img.bg {
     position: relative !important;
     padding: 0 0 0 10px !important;
     margin: 0 !important; } }
+@media screen and (max-width: 810px) {
+  .tile {
+    margin: 0 auto; } }
 /*jribbble code*/
 .gallery {
   position: relative; }
-  .gallery .gallery-feed .tile {
-    list-style-type: none;
-    /* display: block; */
-    position: relative;
-    float: left; }
-    .gallery .gallery-feed .tile .thumb img {
-      width: 349px;
-      height: auto; }
-    .gallery .gallery-feed .tile .thumb figure {
-      position: absolute;
-      width: 350px;
-      height: 100%;
-      top: 0;
-      margin: 0;
-      text-align: center;
-      color: #fefefe;
-      padding-top: 0;
-      background: rgba(39, 52, 56, 0.9);
-      opacity: 0;
-      height: 262px;
-      box-sizing: border-box; }
-    .gallery .gallery-feed .tile .thumb:hover figure {
-      -webkit-transition: 0.5s;
-      -moz-transition: 0.5s;
-      transition: 0.5s;
-      opacity: 1;
-      padding-top: 120px;
-      font-size: 30px;
-      cursor: pointer; }
-    .gallery .gallery-feed .tile .special {
-      background: #F3C029;
-      color: #333; }
+  .gallery .gallery-feed {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 0; }
+    .gallery .gallery-feed .tile {
+      list-style-type: none;
+      /* display: block; */
+      position: relative; }
+      .gallery .gallery-feed .tile .thumb img {
+        width: 24.375rem;
+        height: auto; }
+      .gallery .gallery-feed .tile .thumb figure {
+        position: absolute;
+        width: 24.375rem;
+        height: 100%;
+        top: 0;
+        margin: 0;
+        text-align: center;
+        color: #fefefe;
+        padding-top: 0;
+        background: rgba(39, 52, 56, 0.9);
+        opacity: 0;
+        box-sizing: border-box; }
+      .gallery .gallery-feed .tile .thumb:hover figure {
+        -webkit-transition: 0.5s;
+        -moz-transition: 0.5s;
+        transition: 0.5s;
+        opacity: 1;
+        padding-top: 120px;
+        font-size: 30px;
+        cursor: pointer; }
+      .gallery .gallery-feed .tile .special {
+        background: #F3C029;
+        color: #333; }
