--- a/css/app.css
+++ b/css/app.css
@@ -4147,3 +4147,40 @@ img.bg {
       .gallery .gallery-feed .tile .special {
         background: #F3C029;
         color: #333; }
+
+.work-button {
+  padding: 8px 18px 8px 15px;
+  border-radius: 50px;
+  margin-left: .6rem;
+  color: #e5ef5b; }
+
+.cta {
+  position: fixed;
+  bottom: 3rem;
+  left: -1px;
+  z-index: 999;
+  background: rgba(44, 58, 62, 0.9);
+  color: #2b383c;
+  width: 307px;
+  height: 50px;
+  border: 1px solid #425155;
+  font-size: 14px;
+  color: #fefefe; }
+  .cta .fa {
+    color: #e5ef5b !important; }
+  .cta .icon {
+    margin-left: .6rem;
+    transition: all .4s ease; }
+  .cta .work-button:hover {
+    color: #e5ef5b; }
+    .cta .work-button:hover .icon {
+      margin-left: .9rem; }
+  .cta p {
+    margin-bottom: 0 !important;
+    margin-top: 12px;
+    margin-left: 20px; }
+
+@media screen and (max-width: 810px) {
+  .cta {
+    top: 1rem;
+    bottom: 1rem; } }
