Updated portfolio grid

--- a/css/app.css
+++ b/css/app.css
@@ -4184,3 +4184,18 @@ img.bg {
   .cta {
     top: 1rem;
     bottom: 1rem; } }
+.portfolio-grid {
+  margin-top: 4rem;
+  background: rgba(44, 58, 62, 0.5); }
+  .portfolio-grid .title {
+    text-align: center; }
+    .portfolio-grid .title h5 {
+      color: black;
+      color: #e5ef5b;
+      margin-bottom: 10px;
+      padding-top: 30px; }
+    .portfolio-grid .title p {
+      font-size: 14px;
+      margin-bottom: 50px; }
+    .portfolio-grid .title a {
+      color: #4baad4; }
