--- a/css/app.css
+++ b/css/app.css
@@ -4068,8 +4068,11 @@ img.bg {
   margin: 0 0 3rem 3rem;
   padding: 2.5rem;
   border: 1px solid #425155;
-  background: #283439; }
+  background: rgba(44, 58, 62, 0.9); }
 
+@media screen and (max-width: 810px) {
+  .display-text-left {
+    background: #283439; } }
 .display-text-right {
   color: #868c8e;
   margin: 0 3rem 3rem 0;
@@ -4122,11 +4125,11 @@ img.bg {
       /* display: block; */
       position: relative; }
       .gallery .gallery-feed .tile .thumb img {
-        width: 24.330rem;
+        width: 21.83rem;
         height: auto; }
       .gallery .gallery-feed .tile .thumb figure {
         position: absolute;
-        width: 24.330rem;
+        width: 21.83rem;
         height: 100%;
         top: 0;
         margin: 0;
@@ -4186,6 +4189,7 @@ img.bg {
     bottom: 1rem; } }
 .portfolio-grid {
   margin-top: 4rem;
+  max-width: 1080px;
   background: rgba(44, 58, 62, 0.5);
   border: 1px solid #425155; }
   .portfolio-grid .title {
@@ -4196,10 +4200,18 @@ img.bg {
       margin-bottom: 10px;
       padding-top: 30px; }
     .portfolio-grid .title p {
-      font-size: 14px;
+      font-size: 16px;
       margin-bottom: 50px; }
     .portfolio-grid .title a {
       color: #4baad4; }
+    .portfolio-grid .title i {
+      margin-left: 8px;
+      vertical-align: center;
+      transform: translate(20%, 20%);
+      font-size: 24px;
+      opacity: .6; }
+    .portfolio-grid .title i:hover {
+      opacity: .7; }
 
 .mobile-logo {
   position: absolute;
