--- a/css/app.css
+++ b/css/app.css
@@ -4058,7 +4058,7 @@ img.bg {
   list-style-type: none;
   display: inline; }
   .inline-list li {
-    margin-left: .7rem;
+    margin-left: 1rem;
     float: left; }
 
 .menu-items {
@@ -4081,7 +4081,8 @@ img.bg {
   .display-text-right ul {
     color: #2b393e; }
     .display-text-right ul li {
-      margin-top: 20px; }
+      margin-top: 20px;
+      font-size: 24px; }
     .display-text-right ul a {
       opacity: .5; }
     .display-text-right ul a:hover {
