--- a/scss/app.scss
+++ b/scss/app.scss
@@ -133,7 +133,7 @@ img.bg {
   display: inline;
 
   li {
-    margin-left: .7rem;
+    margin-left: 1rem;
     float: left;
   }
 }
@@ -165,6 +165,7 @@ img.bg {
 		color: #2b393e;
     li {
       margin-top: 20px;
+      font-size: 24px;
     }
 
 		a {
