--- a/test-build/scss/colors.scss
+++ b/test-build/scss/colors.scss
@@ -6,6 +6,8 @@ $light-gray: #e7e7e7;
 /* ------------------------------ */
 
 /* Standard blues and other standard colors */
+$purple: #94acf9;
+$dark-purple: #5f7bde;
 $blue-seas: #4baad4;
 $light-blue-seas: #a3d7ee;
 $dark-blue-seas: #42a4d0;
