--- a/practice/test-build/scss/app.scss
+++ b/practice/test-build/scss/app.scss
@@ -6,6 +6,8 @@
 @import 'typography';
 @import 'buttons';
 @import 'forms';
+@import 'video-section';
+@import 'time-remaining';
 // @import 'nav';
 // @import 'use-cases';
 // @import 'cta';
