--- a/practice/test-build/css/app.css
+++ b/practice/test-build/css/app.css
@@ -54,7 +54,8 @@
   padding-bottom: 124px;
   color: #fff;
   text-align: center;
-  background: #94acf9; }
+  background: #94acf9;
+  min-height: 725px; }
   .hero h1 {
     margin-top: 160px; }
   .hero p {
@@ -575,6 +576,60 @@ label > .label-body {
   display: inline-block;
   margin-left: .5rem;
   font-weight: normal; }
+
+.video-section .box {
+  width: 900px;
+  height: 450px;
+  margin-top: -200px;
+  border-radius: 5px;
+  background: #5f7bde;
+  box-shadow: 3px 4px 10px -2px rgba(0, 0, 0, 0.45);
+  overflow: hidden; }
+  .video-section .box img {
+    width: 100%; }
+
+.time-remaining {
+  margin-top: 125px;
+  padding-bottom: 95px;
+  text-align: center; }
+  .time-remaining h1 {
+    font-size: 36px; }
+  .time-remaining .numbers {
+    margin-top: 75px; }
+    .time-remaining .numbers h3 {
+      display: inline;
+      font-size: 8.5rem;
+      font-weight: 100;
+      color: #94acf9;
+      padding: 30px 38px;
+      background: #fff;
+      margin-left: 15px;
+      box-shadow: 4px 4px 32px -9px rgba(0, 0, 0, 0.15); }
+    .time-remaining .numbers h4 {
+      margin-top: 55px;
+      font-size: 1.2rem;
+      color: #e7e7e7;
+      text-transform: uppercase;
+      letter-spacing: .1em;
+      font-weight: 600; }
+    .time-remaining .numbers .hours:after {
+      content: "";
+      position: absolute;
+      right: 630px;
+      bottom: 125px;
+      height: 10px;
+      width: 10px;
+      border-radius: 10px;
+      background: #e7e7e7; }
+    .time-remaining .numbers .minutes:after {
+      content: "";
+      position: absolute;
+      right: 300px;
+      bottom: 125px;
+      height: 10px;
+      width: 10px;
+      border-radius: 10px;
+      background: #e7e7e7; }
 
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
