--- a/iamdonny-update/scss/hero.scss
+++ b/iamdonny-update/scss/hero.scss
@@ -1,3 +1,5 @@
+$white: #fff;
+
 .hero {
 	height: 100vh;
 
@@ -30,9 +32,14 @@
 		background: #4FC3F7;
 		padding: 20px 15% 20px 20px;
 		border-radius: 5px;
-		width: 100%;
-		text-align: right;
 		z-index: -2;
+
+		.social {
+
+			fa {
+				padding-left: 30px;
+			}
+		}
 	}
 
 	.illustration {
