stuff and stuff

--- a/scss/buttons.scss
+++ b/scss/buttons.scss
@@ -20,7 +20,7 @@ input[type="button"] {
   background-color: transparent;
   transition: all ease .5s;
   border-radius: 4px;
-  border: 1px solid #bbb;
+  border: 1px solid #85DBF9;
   cursor: pointer;
   box-sizing: border-box; }
 .button:hover,
