--- a/css/app.css
+++ b/css/app.css
@@ -19,6 +19,17 @@
     position: fixed;
     -webkit-clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%);
     clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%); }
+    .hero .left .author {
+      width: 35px;
+      display: block;
+      opacity: .8; }
+    .hero .left button {
+      margin-top: 25px; }
+    .hero .left .fa {
+      font-size: 16px;
+      color: #fff;
+      text-decoration: none;
+      padding-right: 10px; }
   .hero .cta {
     position: absolute;
     bottom: 0;
@@ -450,7 +461,7 @@ input[type="button"] {
   background-color: transparent;
   transition: all ease .5s;
   border-radius: 4px;
-  border: 1px solid #bbb;
+  border: 1px solid #85DBF9;
   cursor: pointer;
   box-sizing: border-box; }
 
@@ -641,7 +652,7 @@ label > .label-body {
       -moz-box-shadow: 5px 6px 26px -15px rgba(0, 0, 0, 0.64);
       box-shadow: 5px 6px 26px -15px rgba(0, 0, 0, 0.64); }
       .panel-ctas .panel .resume button {
-        border: 1px solid #bbb; }
+        border: 1px solid rgba(255, 255, 255, 0.5); }
       .panel-ctas .panel .resume:hover {
         top: -5px;
         -webkit-box-shadow: 5px 6px 26px -9px rgba(0, 0, 0, 0.64);
@@ -674,7 +685,7 @@ label > .label-body {
       -moz-box-shadow: 5px 6px 26px -15px rgba(0, 0, 0, 0.64);
       box-shadow: 5px 6px 26px -15px rgba(0, 0, 0, 0.64); }
       .panel-ctas .panel .dribble button {
-        border: 1px solid #bbb; }
+        border: 1px solid rgba(255, 255, 255, 0.5); }
       .panel-ctas .panel .dribble:hover {
         top: -5px;
         -webkit-box-shadow: 5px 6px 26px -9px rgba(0, 0, 0, 0.64);
