--- a/scss/panel-ctas.scss
+++ b/scss/panel-ctas.scss
@@ -54,7 +54,7 @@
 			box-shadow: 5px 6px 26px -15px rgba(0,0,0,0.64);
 
 			button {
-				border: 1px solid #bbb;
+				border: 1px solid rgba(255,255,255,.5);
 			}
 
 			&:hover {
@@ -99,7 +99,7 @@
 			box-shadow: 5px 6px 26px -15px rgba(0,0,0,0.64);
 
 			button {
-				border: 1px solid #bbb;
+				border: 1px solid rgba(255,255,255,.5);
 			}
 
 			&:hover {
