--- a/css/app.css
+++ b/css/app.css
@@ -95,7 +95,9 @@
     display: none; } }
 @media screen and (max-width: 550px) {
   .hero .left .content {
-    display: none; } }
+    display: none; }
+  .hero .panel-ctas .panel {
+    padding-right: 25px; } }
 /*
 * Skeleton V2.0.4
 * Copyright 2014, Dave Gamache
