--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -104,9 +104,9 @@
 			-webkit-clip-path: none;
 			clip-path: none;
 			background: $blue;
+			width: 100% !important;
 		// 	background: linear-gradient(270deg, #42a5f5, #2196f3, #1e88e5, #1976d2, #3f51b5);
 		// 	background-size: 1000% 1000%;
-		// 	width: 100% !important;
 
 		// 	-webkit-animation: AnimationName 51s ease infinite;
 		// 	-moz-animation: AnimationName 51s ease infinite;
