--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -11,6 +11,7 @@
 
 	.left {
 		background: $blue;
+		padding-right: 100px;
 		// background: linear-gradient(270deg, #42a5f5, #2196f3, #1e88e5, #1976d2, #3f51b5);
 		// background-size: 1000% 1000%;
 
@@ -104,6 +105,7 @@
 			-webkit-clip-path: none;
 			clip-path: none;
 			background: $blue;
+			padding-right: 0;
 			width: 100% !important;
 		// 	background: linear-gradient(270deg, #42a5f5, #2196f3, #1e88e5, #1976d2, #3f51b5);
 		// 	background-size: 1000% 1000%;
@@ -150,6 +152,7 @@
   	height: auto;
 
   	.left {
+  		padding-right: 0;
 
   		.content {
   			display: none;
