--- a/css/app.css
+++ b/css/app.css
@@ -53,7 +53,8 @@
     text-transform: uppercase;
     font-weight: 600; }
   .hero h5 {
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    margin-bottom: 15px; }
 
 @media screen and (max-width: 1024px) {
   .hero .left {
