--- a/css/app.css
+++ b/css/app.css
@@ -616,6 +616,11 @@ label > .label-body {
       margin-bottom: 0px;
       padding-top: 18px;
       font-weight: 600; }
+    .panel-ctas .panel h5 {
+      color: #90A4AE;
+      text-transform: none;
+      font-size: 14px;
+      letter-spacing: .1rem; }
     .panel-ctas .panel p {
       font-size: 11px;
       font-weight: 100;
@@ -707,6 +712,8 @@ label > .label-body {
     .panel-ctas .panel {
       margin-bottom: 35%;
       pointer-events: auto; }
+      .panel-ctas .panel h5 {
+        display: none; }
       .panel-ctas .panel .resume .icon {
         width: 100%;
         opacity: 1;
