--- a/scss/panel-ctas.scss
+++ b/scss/panel-ctas.scss
@@ -23,6 +23,13 @@
 			font-weight: 600;
 		}
 
+		h5	{
+			color: $gray;
+			text-transform: none;
+			font-size: 14px;
+			letter-spacing: .1rem;
+		}
+
 		p {
 			font-size: 11px;
 			font-weight: 100;
@@ -144,6 +151,10 @@
 		.panel {
 			margin-bottom: 35%;
 			pointer-events: auto;
+
+			h5 {
+				display: none;
+			}
 
 			.resume {
 
