--- a/scss/app.scss
+++ b/scss/app.scss
@@ -7,7 +7,7 @@
 @import 'nav';
 @import 'panel-ctas';
 @import 'animation';
-
+@import 'hero-animation';
 
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
