--- a/css/app.css
+++ b/css/app.css
@@ -20,38 +20,39 @@
     position: fixed;
     -webkit-clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%);
     clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%); }
-    .hero .left .author {
-      width: 35px;
-      display: inline;
-      opacity: .8;
-      padding-right: 25px;
-      padding-top: 15px; }
-    .hero .left button {
-      margin-top: 25px; }
+    .hero .left .cta {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      background: none;
+      padding: 20px 25px 20px 20px;
+      width: 100%;
+      z-index: 1;
+      text-align: left; }
+      .hero .left .cta .social {
+        margin-left: 13px; }
+        .hero .left .cta .social a {
+          margin-left: 40px;
+          color: #fff;
+          opacity: .8;
+          transition: all ease .5s; }
+          .hero .left .cta .social a:hover {
+            opacity: 1; }
+        .hero .left .cta .social .fa {
+          font-size: 28px; }
     .hero .left .fa {
       font-size: 16px;
       color: #fff;
       text-decoration: none;
       padding-right: 10px; }
-  .hero .cta {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    background: #8BC34A;
-    padding: 20px 25px 20px 20px;
-    width: 100%;
-    z-index: 1;
-    text-align: right; }
-    .hero .cta .social a {
-      margin-left: 40px;
-      color: #fff;
-      opacity: .8;
-      transition: all ease .5s; }
-      .hero .cta .social a:hover {
-        opacity: 1; }
+    .hero .left button {
+      margin-top: 25px; }
   .hero h1 {
     text-transform: uppercase;
     font-weight: 600; }
+  .hero h4 {
+    letter-spacing: .2rem;
+    font-weight: 300; }
   .hero h5 {
     text-transform: uppercase;
     margin-bottom: 15px; }
@@ -63,11 +64,11 @@
     background: #03A9F4;
     padding-right: 0;
     width: 100% !important; }
-  .hero .cta {
-    z-index: 999;
-    text-align: center; }
-    .hero .cta .fa-2x {
-      font-size: 3em; }
+    .hero .left .cta {
+      z-index: 999;
+      text-align: center; }
+      .hero .left .cta .fa-2x {
+        font-size: 3em; }
 
   .hero-image {
     display: none; } }
