--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -10,30 +10,29 @@
 	color: $white;
 
 	.left {
-		background: $blue;
 		padding-right: 100px;
-		// background: linear-gradient(270deg, #42a5f5, #2196f3, #1e88e5, #1976d2, #3f51b5);
-		// background-size: 1000% 1000%;
+		background: linear-gradient(270deg, #42a5f5, #2196f3, #1e88e5, #1976d2, #3f51b5);
+		background-size: 1000% 1000%;
 
-		// -webkit-animation: AnimationName 51s ease infinite;
-		// -moz-animation: AnimationName 51s ease infinite;
-		// animation: AnimationName 51s ease infinite;
+		-webkit-animation: AnimationName 51s ease infinite;
+		-moz-animation: AnimationName 51s ease infinite;
+		animation: AnimationName 51s ease infinite;
 
-		// @-webkit-keyframes AnimationName {
-		//     0%{background-position:0% 50%}
-		//     50%{background-position:100% 51%}
-		//     100%{background-position:0% 50%}
-		// }
-		// @-moz-keyframes AnimationName {
-		//     0%{background-position:0% 50%}
-		//     50%{background-position:100% 51%}
-		//     100%{background-position:0% 50%}
-		// }
-		// @keyframes AnimationName { 
-		//     0%{background-position:0% 50%}
-		//     50%{background-position:100% 51%}
-		//     100%{background-position:0% 50%}
-		// }
+		@-webkit-keyframes AnimationName {
+		    0%{background-position:0% 50%}
+		    50%{background-position:100% 51%}
+		    100%{background-position:0% 50%}
+		}
+		@-moz-keyframes AnimationName {
+		    0%{background-position:0% 50%}
+		    50%{background-position:100% 51%}
+		    100%{background-position:0% 50%}
+		}
+		@keyframes AnimationName { 
+		    0%{background-position:0% 50%}
+		    50%{background-position:100% 51%}
+		    100%{background-position:0% 50%}
+		}
 		height: 100%;
 		padding-top: 13%;
 		padding-left: 6rem;
