--- a/css/app.css
+++ b/css/app.css
@@ -18,7 +18,6 @@
     -moz-animation: AnimationName 51s ease infinite;
     animation: AnimationName 51s ease infinite;
     height: 100%;
-    padding-top: 13%;
     padding-left: 6rem;
     z-index: 3;
     position: fixed;
@@ -45,6 +44,10 @@
     background-position: 100% 51%; }
   100% {
     background-position: 0% 50%; } }
+    .hero .left .left-bar {
+      height: 100%;
+      display: flex;
+      align-items: center; }
     .hero .left .cta {
       position: absolute;
       bottom: 0;
@@ -100,6 +103,9 @@
     height: auto; }
     .hero .left {
       padding-right: 0; }
+      .hero .left .left-bar {
+        align-items: flex-start;
+        padding-top: 100px; }
       .hero .left .content {
         display: none; }
     .hero .panel-ctas {
