--- a/scss/panel-ctas.scss
+++ b/scss/panel-ctas.scss
@@ -3,6 +3,7 @@
 	height: 100%;
 	position: absolute;
 	right: 25px;
+	z-index: 99;
 	display: flex;
 	align-items: center;
 	justify-content: center;
