swapped animate image

--- a/css/app.css
+++ b/css/app.css
@@ -780,7 +780,7 @@ label > .label-body {
       .panel-ctas .panel .dribble .content {
         display: none; } }
 #animate-area {
-  background-image: url(http://iamdonny.com/images/updatedstates.gif);
+  background-image: url(http://iamdonny.com/images/updatedstates.png);
   background-position: 0px 0px;
   background-repeat: repeat-x;
   animation: animatedBackground 20s linear infinite; }
