--- a/scss/animation.scss
+++ b/scss/animation.scss
@@ -1,5 +1,5 @@
 #animate-area	{  
-	background-image: url(http://iamdonny.com/images/updatedstates.gif);
+	background-image: url(http://iamdonny.com/images/updatedstates.png);
 	background-position: 0px 0px;
 	background-repeat: repeat-x;
 
