--- a/css/app.css
+++ b/css/app.css
@@ -5,7 +5,8 @@
   position: absolute;
   z-index: -3;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  opacity: 0.3; }
 
 .hero {
   height: 100vh;
@@ -783,7 +784,7 @@ label > .label-body {
   background-image: url(http://iamdonny.com/images/updatedstates.jpg);
   background-position: 0px 0px;
   background-repeat: repeat-x;
-  animation: animatedBackground 15s linear infinite; }
+  animation: animatedBackground 10s linear infinite; }
 
 @keyframes animatedBackground {
   from {
