--- a/css/app.css
+++ b/css/app.css
@@ -59,6 +59,13 @@
       width: 400px;
       z-index: 1;
       text-align: left; }
+      .hero .left .cta .social .tooltip {
+        display: none;
+        font-size: 8px;
+        text-transform: uppercase;
+        letter-spacing: .2rem;
+        text-decoration: none !important;
+        transition: all ease .5s; }
       .hero .left .cta .social a {
         margin-left: 35px;
         color: #fff;
@@ -66,6 +73,8 @@
         transition: all ease .5s; }
         .hero .left .cta .social a:hover {
           opacity: 1; }
+          .hero .left .cta .social a:hover .tooltip {
+            display: inline; }
       .hero .left .cta .social .fa {
         font-size: 28px; }
     .hero .left .fa {
